# grand_tour_dataset

./: .gitignore  .gitmodules  README.md
examples/: [0]_Accessing_GrandTour_Data.ipynb  [1]_Exploring_GrandTour_Data.ipynb
examples_hugging_face/: README.md  [0]_Accessing_GrandTour_Data.ipynb  [1]_Exploring_GrandTour_Data.ipynb  access.ipynb  pyproject.toml
examples_hugging_face/notebooks/: access.ipynb  explore.ipynb
examples_hugging_face/scripts/: download_data.py  dynamic_points_filtering_using_images.py  generate_elevation_maps.py  grand_tour_release.yaml  nerfstudio_convert.py  plot_lidar_3d.py  project_lidar_on_image.py  zarr_transforms.py
examples_hugging_face/src/grand_tour/: zarr_transforms.py
examples_kleinkram/: kleinkram_cli_example.py
examples_ros1/grand_tour_ros1/: CMakeLists.txt  README.md  package.xml
examples_ros1/grand_tour_ros1/cfg/: cameras.rviz  cameras_helpers.rviz  lidars.rviz  rqt_multiplot_imus.xml
examples_ros1/grand_tour_ros1/launch/: cameras.launch  cameras_helpers.launch  imus.launch  lidars.launch  sensors.launch
examples_ros1/grand_tour_ros1/scripts/: extract_transforms_from_tf_static.py  kleinkram_cli_example.py  kleinkram_extract_images.py  rosbag_play.sh  zed2i_depth_image_decompression.py
helpers/: compress_videos.sh  play_bag.sh
